--- a/Orgs/app/src/main/res/layout/formulario_imagem.xml
+++ b/Orgs/app/src/main/res/layout/formulario_imagem.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
 
         <ImageView
             android:id="@+id/formulario_imagem_imageview"
@@ -31,7 +32,7 @@
             app:layout_constraintTop_toBottomOf="@id/formulario_imagem_imageview" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/forumario_imagem_textinput_url"
+            android:id="@+id/formulario_imagem_textinputlayout_url"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,7 +43,7 @@
             app:layout_constraintTop_toBottomOf="@id/formulario_imagem_botao_carregar">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/forumario_imagem_url"
+                android:id="@+id/formulario_imagem_url"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="URL da imagem"
